// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler Error messages generate nice error message for conditionals 1`] = `
"file:1:2: 'if' needs exactly 3 arguments, got 1
(if)
--^"
`;

exports[`Compiler Error messages generate nice error message for conditionals 2`] = `
"file:1:4: 'if' needs exactly 3 arguments, got 2
(if 5)
----^"
`;

exports[`Compiler Error messages generate nice error message for conditionals 3`] = `
"file:1:6: 'if' needs exactly 3 arguments, got 3
(if x 2)
------^"
`;

exports[`Compiler Error messages generate nice error message for conditionals 4`] = `
"file:1:10: 'if' needs exactly 3 arguments, got 5
(if x 2 3 0)
----------^"
`;

exports[`Compiler Error messages generate nice error message for invalid definitions 1`] = `
"file:1:6: 'define' needs exactly 2 arguments, got 0
(define)
------^"
`;

exports[`Compiler Error messages generate nice error message for invalid definitions 2`] = `
"file:1:8: 'define' needs exactly 2 arguments, got 1
(define 5)
--------^"
`;

exports[`Compiler Error messages generate nice error message for invalid definitions 3`] = `
"file:1:8: 'define' needs exactly 2 arguments, got 1
(define x)
--------^"
`;

exports[`Compiler Error messages generate nice error message for invalid definitions 4`] = `
"file:1:8: 'define' expected a symbol
(define 4 2)
--------^"
`;

exports[`Compiler Error messages generate nice error message for invalid lambda expressions 1`] = `
"file:1:6: 'lambda' is missing the argument list
(lambda)
------^"
`;

exports[`Compiler Error messages generate nice error message for invalid lambda expressions 2`] = `
"file:1:8: 'lambda' is missing the body
(lambda 7)
--------^"
`;

exports[`Compiler Error messages generate nice error message for invalid lambda expressions 3`] = `
"file:1:8: Expected a list of arguments
(lambda 7 5)
--------^"
`;

exports[`Compiler Error messages generate nice error message for invalid lambda expressions 4`] = `
"file:1:9: A list of arguments should be made of symbols
(lambda (7) x)
---------^"
`;

exports[`Compiler Error messages generate nice error message for invalid lambda expressions 5`] = `
"file:1:11: A list of arguments should be made of symbols
(lambda (x 7) x)
-----------^"
`;

exports[`Compiler Error messages generate nice error message for invalid let expressions 1`] = `
"file:1:3: 'let' is missing the bindings
(let)
---^"
`;

exports[`Compiler Error messages generate nice error message for invalid let expressions 2`] = `
"file:1:5: 'let' bindings should be a list
(let x 5)
-----^"
`;

exports[`Compiler Error messages generate nice error message for invalid let expressions 3`] = `
"file:1:6: 'let' binding should be a list
(let (x) x)
------^"
`;

exports[`Compiler Error messages generate nice error message for invalid let expressions 4`] = `
"file:1:7: expected a symbol
(let ((5 5)) x)
-------^"
`;

exports[`Compiler Error messages generate nice error message for invalid let expressions 5`] = `
"file:1:6: ill-formed let binding
(let ((x)) x)
------^"
`;
